Fix full viewport height too large on mobile

--- a/packages/frontend/src/views/HomeView/HomeView.module.css
+++ b/packages/frontend/src/views/HomeView/HomeView.module.css
@@ -1,6 +1,6 @@
 .homeView {
   background: var(--flocker-color-primary);
-  height: 100vh;
+  height: 100%;
   width: 100%;
   display: flex;
   flex-direction: column;
