--- a/packages/frontend/src/views/SignInToJoinView/SignInToJoinView.module.css
+++ b/packages/frontend/src/views/SignInToJoinView/SignInToJoinView.module.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  min-height: 100vh;
+  min-height: 100%;
   width: 100%;
   background-color: var(--flocker-color-primary);
 }
